0.09011

    - TT template files changed - update them if you use a local copy.
      Template file 'label_tag' renamed to 'label_element' - old file can
      be deleted.
    
    - Bug fix: param_value() form method now matches documented behaviour -
      returns undef when field has errors. (Reported by Hailin Hu).
    
    - New Element::Email and Element::URL HTML5 input fields.
    
    - Form and Elements have new title(), title_xml() and title_loc()
      attribute accessors.
    
    - Constraint::Regex has new anchored() accessor.
    
    - New Input attribute accessors: placeholder(), pattern(), autocomplete().
    
    - New Input boolean attribute accessors: autofocus(), multiple(), required().
    
    - New Czech (cs) I18N translation by Jan Grmela.
    
    - mk_inherited_accessors() now also creates a *_no_inherit() method.
    
    - Error message container tags now have a 'for' attribute - for use by
      client side scripts, such as jQuery validation.
    
    - Experimental new roles() form method.

0.09010 2012-10-05

    - Internal changes - all Repeatable/nested_name munging is moved out of
      HTML::FormFu::Element::Repeatable into individual constraints

0.09009 2012-09-29
    - Make sure object can('checked') before calling checked() (colinnewell)
    - Updated Repeatable control to update id_field on DBIC::Unique if present
    - ComboBox new get_select_field_nested_name(), get_text_field_nested_name()
      accessors.
    - Fieldset new legend_attributes() method.
    - New form_error_message_class() method.
    - Constraint 'when' callback now receives $constraint as 2nd argument.

0.09007 2012-01-23
    - bump MooseX::Attribute::Chained version

0.09006 2012-01-23
    - fixed deprecation warnings of MX::Attribute::Chained (bricas)
    - Added placeholder attributes for types Text and Textarea with L10N support.
    - Added L10N support for 'prefix' attributes for types Date and DateTime.