@@ -32,6 +32,7 @@ __PACKAGE__->mk_output_accessors(qw( content ));
 
 __PACKAGE__->mk_inherited_accessors( qw(
         auto_id auto_label auto_label_class auto_comment_class
+        auto_datalist_id
         auto_container_class auto_container_error_class
         auto_error_class auto_error_message
         auto_constraint_class auto_inflator_class auto_validator_class
@@ -371,6 +372,10 @@ See L<HTML::FormFu/transformers> for details.
 =head2 transformer
 
 See L<HTML::FormFu/transformer> for details.
+
+=head2 auto_datalist_id
+
+See L<HTML::FormFu/auto_datalist_id> for details.
 
 =head1 CSS CLASSES
 
