@@ -78,6 +78,7 @@ our @INHERITED_ACCESSORS = qw(
     auto_error_class                auto_error_message
     auto_constraint_class           auto_inflator_class
     auto_validator_class            auto_transformer_class
+    auto_datalist_id
     render_method                   render_processed_value
     force_errors                    repeatable_count
     config_file_path                locale
